src/lexical_analysis/tests/snapshots/rust_monkey_interpreter__lexical_analysis__tests__test_empty_code.snap
---
source: src/lexical_analysis/tests/mod.rs
expression: "crate::lexical_analysis::get_tokens(\"\")"
---
[
  "EOF"
]
