src/lexical_analysis/tests/snapshots/rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_identifiers_case1.snap
---
source: src/lexical_analysis/tests/mod.rs
expression: "crate::lexical_analysis::get_tokens(code)"
---
[
  "LET",
  {
    "IDENTIFIER": {
      "literal": "x"
    }
  },
  "SEMI_COLON",
  "EOF"
]
