src/lexical_analysis/tests/snapshots/rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_identifiers_case2.snap
---
source: src/lexical_analysis/tests/mod.rs
expression: "crate::lexical_analysis::get_tokens(code)"
---
[
    LET,
    IDENTIFIER {
        literal: "varX",
    },
    ASSIGN,
    INTEGER {
        literal: "5",
    },
    PLUS,
    INTEGER {
        literal: "5",
    },
    SEMI_COLON,
    EOF,
]
