src/lexical_analysis/tests/snapshots/rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_keywords_case1.snap
---
source: src/lexical_analysis/tests/mod.rs
expression: returned_tokens
---
[
  "TRUE",
  "FALSE",
  "EOF"
]
