src/lexical_analysis/tests/snapshots/rust_monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_keywords_case2.snap
---
source: src/lexical_analysis/tests/mod.rs
expression: "crate::lexical_analysis::get_tokens(code)"
---
[
    IF,
    FALSE,
    RETURN,
    INTEGER {
        literal: "3",
    },
    SEMI_COLON,
    EOF,
]
